# SolarSiteSelection

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  GP_Modernization_Report.md  LICENSE  Makefile  README.md  Solar_Master_Plan.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: criteria.yaml
docs/: architecture.md  history.md  methodology.md
docs/validation/: README.md  lsi_class_distribution.csv  lsi_class_table.md
scripts/: demo_aoi.py  deploy_hf.py  prepare_wdpa.py  validate_against_paper.py
src/solarsite/: __init__.py
src/solarsite/acquire/: __init__.py  base.py  climate.py  landcover.py  osm.py  pvgis.py  terrain.py
src/solarsite/analysis/: __init__.py  ahp.py  energy.py  losses.py  (+4 more)
tests/: test_acquire_base.py  test_acquire_climate.py  test_acquire_landcover.py  test_acquire_osm.py  test_acquire_pvgis.py  test_acquire_terrain.py  test_ahp.py  test_api_lifecycle.py  test_consumer.py  test_core_aoi.py  test_core_cache.py  test_core_crs.py  test_core_proximity.py  test_core_raster.py  test_dispatch.py  test_e2e_pipeline.py  test_energy.py  test_geocode.py  test_jobs_pipeline.py  test_losses.py  test_oracle_reference.py  test_overlay.py  test_reclassify.py  test_registry_criteria.py  test_report_html.py  test_sanity.py  test_sites.py  test_skeleton.py  test_uncertainty.py  test_validation_pipeline.py  test_version.py
tests/fixtures/: nw_coast_aoi.geojson
web/: package-lock.json  package.json  playwright.config.ts
web/e2e/: acceptance.spec.ts  consumer-gate.spec.ts  interaction-gate.spec.ts  render-gate.spec.ts
web/src/: App.tsx  index.css  main.tsx
(+62 files in other folders)
