[project]
name = "solarsite"
version = "0.1.0"
description = "Draw an area on a map, get a defensible PV siting analysis: AHP multi-criteria suitability, candidate sites, and pvlib energy estimates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "rasterio>=1.3.9",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pvlib>=0.10.3",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "httpx>=0.26",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
    "weasyprint>=60.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "responses>=0.24",
    "hypothesis>=6.92",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solarsite"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: hits real external APIs (excluded from CI)",
    "slow: long-running",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/solarsite"]
